--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
 
 <section id="Contact">
 	<h2>Contact</h2>
-
+	<div id="isi">
+		<div id="email">
+		<img src="https://image.flaticon.com/icons/svg/281/281769.svg" width="50"><p>qoisoctava@mail.ugm.ac.id</p>
+	</div>
+		<div id="instagram">
+		<img src="https://image.flaticon.com/icons/svg/2111/2111463.svg" width="50"><p>@mqois16</p>
+	</div>
+</div>
+	
 </section>
 <section id="Footer">
 	<div id="copy">
