--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 		<div id="instagram">
 		<img src="https://image.flaticon.com/icons/svg/2111/2111463.svg" width="50"><p>@mqois16</p>
 	</div>
+	<div id="snapwire">
+		<img src="https://images-na.ssl-images-amazon.com/images/I/51Bmzfmvq%2BL._SY355_.png" width="50"><p>qois octava</p>
+	</div>
+	</div>
+		
 </div>
 	
 </section>
